[gd_scene load_steps=10 format=2]

[ext_resource path="res://tmp/3dCC.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/footstep_wood.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/footstep_carpet.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/mouse_pointer.png" type="Texture" id=4]

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[sub_resource type="PrismMesh" id=3]
size = Vector3( 1, 0.8, 0.5 )

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.5

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.466726, 0.468977, 0.114041 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.498865, 0.265566, 0.480445 )

[node name="3dCC" type="KinematicBody" groups=["Player"]]
collision_layer = 5
script = ExtResource( 1 )
move_speed = 8
acceleration = 1.1
friction = 1.34

[node name="Mesh" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="CameraGizmo" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -0.0431311, -0.999069, 0, 0.999069, -0.0431311, 0, 0.512502, -0.456326 )
mesh = SubResource( 3 )
material/0 = null

[node name="UpperCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.25, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="UpperCollider"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.09278e-08, 0.25 )
current = true

[node name="RayCast" type="RayCast" parent="UpperCollider/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collide_with_areas = true

[node name="LowerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.808805, 0 )
shape = SubResource( 5 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Sprite" parent="HUD"]
texture = ExtResource( 4 )
offset = Vector2( 960, 540 )

[node name="Spatial" type="Spatial" parent="."]

[node name="FootstepSoundWood" type="AudioStreamPlayer" parent="Spatial"]
stream = ExtResource( 2 )
bus = "Footsteps"

[node name="FootstepSoundCarpet" type="AudioStreamPlayer" parent="Spatial"]
stream = ExtResource( 3 )
bus = "Footsteps"

[node name="FootstepTimer" type="Timer" parent="Spatial"]
autostart = true

[node name="FloorDiscoverArea" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="FloorDiscoverArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.664281, 0 )
shape = SubResource( 4 )

[connection signal="timeout" from="Spatial/FootstepTimer" to="." method="_on_FootstepTimer_timeout"]
[connection signal="body_entered" from="FloorDiscoverArea" to="." method="_on_FloorDiscoverArea_body_entered"]
[connection signal="body_exited" from="FloorDiscoverArea" to="." method="_on_FloorDiscoverArea_body_exited"]
